Port initial project from VTK/Examples
modified for file structure

--- a/.gitignore
+++ b/.gitignore
@@ -1,6 +1,17 @@
+# CMake Files
 CMakeCache.txt
 CMakeFiles
 CMakeScripts
 Makefile
 cmake_install.cmake
 install_manifest.txt
+
+# Editor settings
+.vscode/
+.vs/
+
+# Recommended build directory
+build/
+
+# Temp Files
+*.autosave
