--- a/Plugins/SelectionExtension/CMakeLists.txt
+++ b/Plugins/SelectionExtension/CMakeLists.txt
@@ -1,5 +1,5 @@
 cmake_minimum_required(VERSION 3.1)
-project(PCDReaderPlugin VERSION 0.1)
+project(SelectionExtension VERSION 0.1)
 
 if(ParaView_SOURCE_DIR)
   include_directories(${VTK_INCLUDE_DIRS})
@@ -10,8 +10,7 @@ else()
 
 endif()
 
-ADD_PARAVIEW_PLUGIN(PCDReader "0.1" 
-  SERVER_MANAGER_XML PCDReader.xml
-  SERVER_MANAGER_SOURCES vtkPCDReader.cxx vtkGridPlaneSource.cxx
-  SOURCES lzf.cpp PCDReaderRaw.cpp
+ADD_PARAVIEW_PLUGIN(SelectionExtension "0.1" 
+  SERVER_MANAGER_XML SelectionExtension.xml
+  SERVER_MANAGER_SOURCES vtkSelectionOperationFilter.cxx
   REQUIRED_ON_SERVER)
